GNOME Bugzilla – Bug 780317
avvidenc: Classify image encoders with "Image" instead of "Video"
Last modified: 2017-03-22 07:04:46 UTC
This allows gst_video_convert_sample*() to work with codecs for which we have libav encoders (such as BMP).
Created attachment 348334 [details] [review] avvidenc: Classify image encoders with "Image" instead of "Video"
Review of attachment 348334 [details] [review]: ::: ext/libav/gstavcodecmap.c @@ +730,3 @@ + case AV_CODEC_ID_MJPEG: + case AV_CODEC_ID_LJPEG: + case AV_CODEC_ID_JPEG2000: JPEG2000 is video most of the time, and openjpegenc is Codec/Encoder/Video
(In reply to Sebastian Dröge (slomo) from comment #2) > Review of attachment 348334 [details] [review] [review]: > > ::: ext/libav/gstavcodecmap.c > @@ +730,3 @@ > + case AV_CODEC_ID_MJPEG: > + case AV_CODEC_ID_LJPEG: > + case AV_CODEC_ID_JPEG2000: > > JPEG2000 is video most of the time, and openjpegenc is Codec/Encoder/Video Fair enough, will drop it. I wonder if we should add 'Image' (while keeping 'Video') to it.
Created attachment 348373 [details] [review] avvidenc: Classify image encoders with "Image" instead of "Video" This allows gst_video_convert_sample*() to work with codecs for which we have libav encoders (such as BMP).
The following fix has been pushed: 2e25f16 avvidenc: Classify image encoders with "Image" instead of "Video"
Created attachment 348461 [details] [review] avvidenc: Classify image encoders with "Image" instead of "Video" This allows gst_video_convert_sample*() to work with codecs for which we have libav encoders (such as BMP).